--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   margin-bottom: 8px;
 }
 
-.card-title {
+.card-Name {
   color: #222169ff;
   font-size: 1.1rem;
   font-weight: 800;
@@ -68,7 +68,7 @@
   font-size: 1rem;
 }
 
-.card-status {
+.card-Number {
   display: flex;
   align-items: center;
   color: #22c55e;
